--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "idb-keyval": "^5.0.2",
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-lazyload": "^3.1.0",
+    "react-loadingg": "^1.7.2",
+    "sweetalert2": "^10.14.0"
   }
 }
